# script-scope-c

./: .gitignore  README.md  deps.toml
src/: CMakeLists.txt
src/include/swamp-script-scope/: script_scope.h  script_static.h
src/lib/: CMakeLists.txt  script_scope.c  script_static.c
